--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
   <header>
-    <img src="Danvith.JPG" alt="Danvith Raj" class="profile-img" />
+    <img src="Danvith.jpd" alt="Danvith Raj" class="profile-img" />
     <h1>👦 Hi, I'm Danvith Raj P M!</h1>
     <p style="font-size: 1.3rem;">I’m 4 years old and I study in <strong>Pre-Nursery</strong> at <strong>Nele School</strong> 🎒</p>
   </header>
